Make the Highlight button larger in Pattern Access Terminal. Enable the ability to toggle visibility for each provider from the Pattern Access Terminal. When the PatternContainer GUI opened from the Pattern Access Terminal is closed, it will return to the Pattern Access Terminal GUI. Fit the highlights of the panel-type pattern provider to the shape.